--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Zoo</title>
 </head>
 <body>
+
+    <nav>
+        Navbar
+    </nav>
+
+    <section>
+        Hero Section
+    </section>
+    
+
+    <footer>
+        Footer
+    </footer>
     
 </body>
 </html>
